--- a/mitiv/cost/PseudoL1Norm.html
+++ b/mitiv/cost/PseudoL1Norm.html
@@ -190,7 +190,7 @@ implements <a href="../../mitiv/cost/ProximalOperator.html" title="interface in 
 <!--   -->
 </a>
 <h3>Methods inherited from interface&nbsp;mitiv.cost.<a href="../../mitiv/cost/ProximalOperator.html" title="interface in mitiv.cost">ProximalOperator</a></h3>
-<code><a href="../../mitiv/cost/ProximalOperator.html#applyProx(double, mitiv.linalg.Vector, mitiv.linalg.Vector, double)">applyProx</a></code></li>
+<code><a href="../../mitiv/cost/ProximalOperator.html#applyProx(mitiv.linalg.Vector, double, mitiv.linalg.Vector, double)">applyProx</a></code></li>
 </ul>
 </li>
 </ul>
