--- a/mitiv/optim/BoundProjector.html
+++ b/mitiv/optim/BoundProjector.html
@@ -35,7 +35,7 @@
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/optim/BLMVM.html" title="class in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/optim/ConvexSetProjector.html" title="class in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/optim/BoxedSet.html" title="class in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/optim/BoundProjector.html" target="_top">FRAMES</a></li>
@@ -522,7 +522,7 @@ extends <a href="../../mitiv/optim/ConvexSetProjector.html" title="class in miti
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/optim/BLMVM.html" title="class in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/optim/ConvexSetProjector.html" title="class in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/optim/BoxedSet.html" title="class in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/optim/BoundProjector.html" target="_top">FRAMES</a></li>
