--- a/mitiv/optim/package-summary.html
+++ b/mitiv/optim/package-summary.html
@@ -93,78 +93,98 @@
 </td>
 </tr>
 <tr class="rowColor">
+<td class="colFirst"><a href="../../mitiv/optim/BoxedSet.html" title="class in mitiv.optim">BoxedSet</a></td>
+<td class="colLast">
+<div class="block">Implementation of boxed set for MiTiV vectors.</div>
+</td>
+</tr>
+<tr class="altColor">
 <td class="colFirst"><a href="../../mitiv/optim/ConvexSetProjector.html" title="class in mitiv.optim">ConvexSetProjector</a></td>
 <td class="colLast">
 <div class="block">Abstract class for projection on a convex set.</div>
 </td>
 </tr>
+<tr class="rowColor">
+<td class="colFirst"><a href="../../mitiv/optim/DoubleBoxedSet.html" title="class in mitiv.optim">DoubleBoxedSet</a></td>
+<td class="colLast">
+<div class="block">Implementation of boxed set for vectors of double precision floating point
+ elements.</div>
+</td>
+</tr>
 <tr class="altColor">
+<td class="colFirst"><a href="../../mitiv/optim/FloatBoxedSet.html" title="class in mitiv.optim">FloatBoxedSet</a></td>
+<td class="colLast">
+<div class="block">Implementation of boxed set for vectors of single precision floating point
+ elements.</div>
+</td>
+</tr>
+<tr class="rowColor">
 <td class="colFirst"><a href="../../mitiv/optim/GeneralBounds.html" title="class in mitiv.optim">GeneralBounds</a></td>
 <td class="colLast">&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../mitiv/optim/LBFGS.html" title="class in mitiv.optim">LBFGS</a></td>
 <td class="colLast">
 <div class="block">Multivariate non-linear optimization by L-BFGS/VMLM method.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../mitiv/optim/LBFGSOperator.html" title="class in mitiv.optim">LBFGSOperator</a></td>
 <td class="colLast">
 <div class="block">Implement limited memory quasi-Newton approximation of the inverse Hessian.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim">LineSearch</a></td>
 <td class="colLast">
 <div class="block">Base class for line search routines.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../mitiv/optim/MoreThuenteLineSearch.html" title="class in mitiv.optim">MoreThuenteLineSearch</a></td>
 <td class="colLast">&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../mitiv/optim/NonLinearConjugateGradient.html" title="class in mitiv.optim">NonLinearConjugateGradient</a></td>
 <td class="colLast">
 <div class="block">Non-linear conjugate gradient methods.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../mitiv/optim/NonmonotoneLineSearch.html" title="class in mitiv.optim">NonmonotoneLineSearch</a></td>
 <td class="colLast">
 <div class="block">Nonmonotone line search method.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim">ReverseCommunicationOptimizer</a></td>
 <td class="colLast">
 <div class="block">Interface for multivariate optimization methods with reverse communication.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../mitiv/optim/ReverseCommunicationOptimizerWithLineSearch.html" title="class in mitiv.optim">ReverseCommunicationOptimizerWithLineSearch</a></td>
 <td class="colLast">&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../mitiv/optim/SimpleBounds.html" title="class in mitiv.optim">SimpleBounds</a></td>
 <td class="colLast">
 <div class="block">Implements a simple bounds projector.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../mitiv/optim/SimpleLowerBound.html" title="class in mitiv.optim">SimpleLowerBound</a></td>
 <td class="colLast">
 <div class="block">Implements a simple lower bound projector.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../mitiv/optim/SimpleUpperBound.html" title="class in mitiv.optim">SimpleUpperBound</a></td>
 <td class="colLast">
 <div class="block">Implements a simple upper bound projector.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../mitiv/optim/VMLMB.html" title="class in mitiv.optim">VMLMB</a></td>
 <td class="colLast">
 <div class="block">Multivariate non-linear optimization with simple bound constraints by
@@ -183,25 +203,21 @@
 </tr>
 <tbody>
 <tr class="altColor">
-<td class="colFirst"><a href="../../mitiv/optim/InverseHessianApproximation.html" title="enum in mitiv.optim">InverseHessianApproximation</a></td>
-<td class="colLast">&nbsp;</td>
-</tr>
-<tr class="rowColor">
 <td class="colFirst"><a href="../../mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim">LineSearchStatus</a></td>
 <td class="colLast">&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim">LineSearchTask</a></td>
 <td class="colLast">&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim">OptimStatus</a></td>
 <td class="colLast">
 <div class="block">Values returned by the reverse communication version of optimization
  algorithms.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a></td>
 <td class="colLast">
 <div class="block">Values returned by the reverse communication version of optimization
