--- a/mitiv/cost/PseudoL1NormOfBoundedDoubleVector.html
+++ b/mitiv/cost/PseudoL1NormOfBoundedDoubleVector.html
@@ -111,7 +111,7 @@
 <pre>public class <strong>PseudoL1NormOfBoundedDoubleVector</strong>
 extends <a href="../../mitiv/cost/PseudoL1NormOfDoubleVector.html" title="class in mitiv.cost">PseudoL1NormOfDoubleVector</a></pre>
 <div class="block">Implement proximal operator for pseudo L1 norm, possibly with bounds.
- 
+
  <p>
  The proximal operator of the pseudo L1 norm is a soft thresholding.</div>
 <dl><dt><span class="strong">Author:</span></dt>
@@ -212,9 +212,9 @@ extends <a href="../../mitiv/cost/PseudoL1NormOfDoubleVector.html" title="class 
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/cost/PseudoL1NormOfBoundedDoubleVector.html#applyProx(double, mitiv.linalg.Vector, mitiv.linalg.Vector, double)">applyProx</a></strong>(double&nbsp;alpha,
+<td class="colLast"><code><strong><a href="../../mitiv/cost/PseudoL1NormOfBoundedDoubleVector.html#applyProx(mitiv.linalg.Vector, double, mitiv.linalg.Vector, double)">applyProx</a></strong>(<a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;out,
+         double&nbsp;alpha,
          <a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;inp,
-         <a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;out,
          double&nbsp;tol)</code>
 <div class="block">Apply the proximal operator of a cost function.</div>
 </td>
@@ -375,17 +375,17 @@ extends <a href="../../mitiv/cost/PseudoL1NormOfDoubleVector.html" title="class 
              double&nbsp;xmax)</pre>
 </li>
 </ul>
-<a name="applyProx(double, mitiv.linalg.Vector, mitiv.linalg.Vector, double)">
+<a name="applyProx(mitiv.linalg.Vector, double, mitiv.linalg.Vector, double)">
 <!--   -->
 </a>
 <ul class="blockListLast">
 <li class="blockList">
 <h4>applyProx</h4>
-<pre>public&nbsp;void&nbsp;applyProx(double&nbsp;alpha,
+<pre>public&nbsp;void&nbsp;applyProx(<a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;out,
+             double&nbsp;alpha,
              <a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;inp,
-             <a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;out,
              double&nbsp;tol)</pre>
-<div class="block"><strong>Description copied from interface:&nbsp;<code><a href="../../mitiv/cost/ProximalOperator.html#applyProx(double, mitiv.linalg.Vector, mitiv.linalg.Vector, double)">ProximalOperator</a></code></strong></div>
+<div class="block"><strong>Description copied from interface:&nbsp;<code><a href="../../mitiv/cost/ProximalOperator.html#applyProx(mitiv.linalg.Vector, double, mitiv.linalg.Vector, double)">ProximalOperator</a></code></strong></div>
 <div class="block">Apply the proximal operator of a cost function.
 
  The purpose of this method is to find the minimum of:
@@ -397,10 +397,10 @@ extends <a href="../../mitiv/cost/PseudoL1NormOfDoubleVector.html" title="class 
  tolerance parameter to find an approximate solution to the problem.</div>
 <dl>
 <dt><strong>Specified by:</strong></dt>
-<dd><code><a href="../../mitiv/cost/ProximalOperator.html#applyProx(double, mitiv.linalg.Vector, mitiv.linalg.Vector, double)">applyProx</a></code>&nbsp;in interface&nbsp;<code><a href="../../mitiv/cost/ProximalOperator.html" title="interface in mitiv.cost">ProximalOperator</a></code></dd>
+<dd><code><a href="../../mitiv/cost/ProximalOperator.html#applyProx(mitiv.linalg.Vector, double, mitiv.linalg.Vector, double)">applyProx</a></code>&nbsp;in interface&nbsp;<code><a href="../../mitiv/cost/ProximalOperator.html" title="interface in mitiv.cost">ProximalOperator</a></code></dd>
 <dt><strong>Overrides:</strong></dt>
-<dd><code><a href="../../mitiv/cost/PseudoL1NormOfDoubleVector.html#applyProx(double, mitiv.linalg.Vector, mitiv.linalg.Vector, double)">applyProx</a></code>&nbsp;in class&nbsp;<code><a href="../../mitiv/cost/PseudoL1NormOfDoubleVector.html" title="class in mitiv.cost">PseudoL1NormOfDoubleVector</a></code></dd>
-<dt><span class="strong">Parameters:</span></dt><dd><code>alpha</code> - - A non-negative weight for the cost.</dd><dd><code>inp</code> - - The vector of input variables.</dd><dd><code>out</code> - - The vector of output variables.</dd><dd><code>tol</code> - - A non-negative tolerance parameter.</dd></dl>
+<dd><code><a href="../../mitiv/cost/PseudoL1NormOfDoubleVector.html#applyProx(mitiv.linalg.Vector, double, mitiv.linalg.Vector, double)">applyProx</a></code>&nbsp;in class&nbsp;<code><a href="../../mitiv/cost/PseudoL1NormOfDoubleVector.html" title="class in mitiv.cost">PseudoL1NormOfDoubleVector</a></code></dd>
+<dt><span class="strong">Parameters:</span></dt><dd><code>out</code> - - The vector of output variables.</dd><dd><code>alpha</code> - - A non-negative weight for the cost.</dd><dd><code>inp</code> - - The vector of input variables.</dd><dd><code>tol</code> - - A non-negative tolerance parameter.</dd></dl>
 </li>
 </ul>
 </li>
