--- a/mitiv/optim/ConvexSetProjector.html
+++ b/mitiv/optim/ConvexSetProjector.html
@@ -34,8 +34,8 @@
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../mitiv/optim/BoundProjector.html" title="class in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/optim/GeneralBounds.html" title="class in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/optim/BoxedSet.html" title="class in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
+<li><a href="../../mitiv/optim/DoubleBoxedSet.html" title="class in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/optim/ConvexSetProjector.html" target="_top">FRAMES</a></li>
@@ -168,8 +168,8 @@ extends java.lang.Object</pre>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>protected abstract void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/ConvexSetProjector.html#_projectVariables(mitiv.linalg.Vector, mitiv.linalg.Vector)">_projectVariables</a></strong>(<a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;x,
-                 <a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;xp)</code>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/ConvexSetProjector.html#_projectVariables(mitiv.linalg.Vector, mitiv.linalg.Vector)">_projectVariables</a></strong>(<a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;xp,
+                 <a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;x)</code>
 <div class="block">Protected method to project the variables to the feasible set.</div>
 </td>
 </tr>
@@ -199,8 +199,8 @@ extends java.lang.Object</pre>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/ConvexSetProjector.html#projectVariables(mitiv.linalg.Vector, mitiv.linalg.Vector)">projectVariables</a></strong>(<a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;x,
-                <a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;xp)</code>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/ConvexSetProjector.html#projectVariables(mitiv.linalg.Vector, mitiv.linalg.Vector)">projectVariables</a></strong>(<a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;xp,
+                <a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;x)</code>
 <div class="block">Project the variables to the feasible set.</div>
 </td>
 </tr>
@@ -296,8 +296,8 @@ extends java.lang.Object</pre>
 <ul class="blockList">
 <li class="blockList">
 <h4>projectVariables</h4>
-<pre>public&nbsp;void&nbsp;projectVariables(<a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;x,
-                    <a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;xp)</pre>
+<pre>public&nbsp;void&nbsp;projectVariables(<a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;xp,
+                    <a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;x)</pre>
 <div class="block">Project the variables to the feasible set.
 
  <p>
@@ -306,10 +306,10 @@ extends java.lang.Object</pre>
  and output variables can be stored in the same vector (<i>i.e.</i>
  the method can be applied <i>in-place</i>).
  </p></div>
-<dl><dt><span class="strong">Parameters:</span></dt><dd><code>x</code> - - The source.</dd><dd><code>xp</code> - - The destination.</dd>
+<dl><dt><span class="strong">Parameters:</span></dt><dd><code>xp</code> - - The output projected variables.</dd><dd><code>x</code> - - The input variables.</dd>
 <dt><span class="strong">Throws:</span></dt>
 <dd><code><a href="../../mitiv/exception/IncorrectSpaceException.html" title="class in mitiv.exception">IncorrectSpaceException</a></code> - if its arguments do not belong to the
-         correct vector space.</dd></dl>
+          correct vector space.</dd></dl>
 </li>
 </ul>
 <a name="projectVariables(mitiv.linalg.Vector)">
@@ -324,7 +324,7 @@ extends java.lang.Object</pre>
              projected variables.</dd>
 <dt><span class="strong">Throws:</span></dt>
 <dd><code><a href="../../mitiv/exception/IncorrectSpaceException.html" title="class in mitiv.exception">IncorrectSpaceException</a></code> - if its arguments do not belong to the
-         correct vector space.</dd></dl>
+          correct vector space.</dd></dl>
 </li>
 </ul>
 <a name="_projectVariables(mitiv.linalg.Vector, mitiv.linalg.Vector)">
@@ -333,8 +333,8 @@ extends java.lang.Object</pre>
 <ul class="blockListLast">
 <li class="blockList">
 <h4>_projectVariables</h4>
-<pre>protected abstract&nbsp;void&nbsp;_projectVariables(<a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;x,
-                     <a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;xp)</pre>
+<pre>protected abstract&nbsp;void&nbsp;_projectVariables(<a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;xp,
+                     <a href="../../mitiv/linalg/Vector.html" title="class in mitiv.linalg">Vector</a>&nbsp;x)</pre>
 <div class="block">Protected method to project the variables to the feasible set.
 
  <p>
@@ -342,7 +342,7 @@ extends java.lang.Object</pre>
  it is guaranteed to be called with checked arguments.  The input and
  output vectors can be the same.
  </p></div>
-<dl><dt><span class="strong">Parameters:</span></dt><dd><code>x</code> - - The source.</dd><dd><code>xp</code> - - The destination.</dd></dl>
+<dl><dt><span class="strong">Parameters:</span></dt><dd><code>xp</code> - - The output projected variables.</dd><dd><code>x</code> - - The input variables.</dd></dl>
 </li>
 </ul>
 </li>
@@ -370,8 +370,8 @@ extends java.lang.Object</pre>
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../mitiv/optim/BoundProjector.html" title="class in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/optim/GeneralBounds.html" title="class in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/optim/BoxedSet.html" title="class in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
+<li><a href="../../mitiv/optim/DoubleBoxedSet.html" title="class in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/optim/ConvexSetProjector.html" target="_top">FRAMES</a></li>
