--- a/overview-tree.html
+++ b/overview-tree.html
@@ -512,6 +512,12 @@
 <li type="circle">mitiv.array.<a href="mitiv/array/ArrayUtils.html" title="class in mitiv.array"><span class="strong">ArrayUtils</span></a></li>
 <li type="circle">mitiv.base.<a href="mitiv/base/BaseUtils.html" title="class in mitiv.base"><span class="strong">BaseUtils</span></a> (implements mitiv.base.<a href="mitiv/base/Traits.html" title="interface in mitiv.base">Traits</a>)</li>
 <li type="circle">mitiv.microscopy.<a href="mitiv/microscopy/BiPhotonModel.html" title="class in mitiv.microscopy"><span class="strong">BiPhotonModel</span></a></li>
+<li type="circle">mitiv.optim.<a href="mitiv/optim/BoxedSet.html" title="class in mitiv.optim"><span class="strong">BoxedSet</span></a>
+<ul>
+<li type="circle">mitiv.optim.<a href="mitiv/optim/DoubleBoxedSet.html" title="class in mitiv.optim"><span class="strong">DoubleBoxedSet</span></a></li>
+<li type="circle">mitiv.optim.<a href="mitiv/optim/FloatBoxedSet.html" title="class in mitiv.optim"><span class="strong">FloatBoxedSet</span></a></li>
+</ul>
+</li>
 <li type="circle">mitiv.io.<a href="mitiv/io/BufferedImageUtils.html" title="class in mitiv.io"><span class="strong">BufferedImageUtils</span></a></li>
 <li type="circle">mitiv.utils.<a href="mitiv/utils/ColorMap.html" title="class in mitiv.utils"><span class="strong">ColorMap</span></a></li>
 <li type="circle">mitiv.utils.<a href="mitiv/utils/CommonUtils.html" title="class in mitiv.utils"><span class="strong">CommonUtils</span></a></li>
@@ -567,9 +573,17 @@
 <li type="circle">mitiv.linalg.<a href="mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg"><span class="strong">LinearOperator</span></a>
 <ul>
 <li type="circle">mitiv.cost.<a href="mitiv/cost/FiniteDifferenceOperator.html" title="class in mitiv.cost"><span class="strong">FiniteDifferenceOperator</span></a></li>
-<li type="circle">mitiv.linalg.<a href="mitiv/linalg/IdentityOperator.html" title="class in mitiv.linalg"><span class="strong">IdentityOperator</span></a></li>
 <li type="circle">mitiv.optim.<a href="mitiv/optim/LBFGSOperator.html" title="class in mitiv.optim"><span class="strong">LBFGSOperator</span></a></li>
 <li type="circle">mitiv.invpb.<a href="mitiv/invpb/LeftHandSideMatrix.html" title="class in mitiv.invpb"><span class="strong">LeftHandSideMatrix</span></a></li>
+<li type="circle">mitiv.linalg.<a href="mitiv/linalg/LinearEndomorphism.html" title="class in mitiv.linalg"><span class="strong">LinearEndomorphism</span></a>
+<ul>
+<li type="circle">mitiv.linalg.<a href="mitiv/linalg/DiagonalOperator.html" title="class in mitiv.linalg"><span class="strong">DiagonalOperator</span></a>
+<ul>
+<li type="circle">mitiv.linalg.<a href="mitiv/linalg/IdentityOperator.html" title="class in mitiv.linalg"><span class="strong">IdentityOperator</span></a></li>
+</ul>
+</li>
+</ul>
+</li>
 <li type="circle">mitiv.linalg.<a href="mitiv/linalg/RankOneOperator.html" title="class in mitiv.linalg"><span class="strong">RankOneOperator</span></a></li>
 <li type="circle">mitiv.linalg.<a href="mitiv/linalg/ScaleOperator.html" title="class in mitiv.linalg"><span class="strong">ScaleOperator</span></a></li>
 <li type="circle">mitiv.linalg.shaped.<a href="mitiv/linalg/shaped/ShapedLinearOperator.html" title="class in mitiv.linalg.shaped"><span class="strong">ShapedLinearOperator</span></a> (implements mitiv.base.<a href="mitiv/base/Traits.html" title="interface in mitiv.base">Traits</a>)
@@ -834,7 +848,6 @@
 <li type="circle">mitiv.optim.<a href="mitiv/optim/OptimStatus.html" title="enum in mitiv.optim"><span class="strong">OptimStatus</span></a></li>
 <li type="circle">mitiv.optim.<a href="mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim"><span class="strong">LineSearchTask</span></a></li>
 <li type="circle">mitiv.optim.<a href="mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim"><span class="strong">LineSearchStatus</span></a></li>
-<li type="circle">mitiv.optim.<a href="mitiv/optim/InverseHessianApproximation.html" title="enum in mitiv.optim"><span class="strong">InverseHessianApproximation</span></a></li>
 </ul>
 </li>
 </ul>
